--- a/file.html
+++ b/file.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="file.css">
     <title>Document</title>
-</head>
-<body>
-   <div class="container">
-    <div class="wrapper">
-        <input type="file" id="file" multiple class="form-control">
-        <div class="images d-flex">
-    
-        </div>
-       </div>
-   </div>
+  </head>
+  <body>
+    <div class="container">
+      <div class="wrapper">
+        <input type="file" id="file" multiple class="form-control" />
+        <div class="images d-flex"></div>
+      </div>
+    </div>
+    <!-- <button class="btn btn-outline-danger d-flex ">remove</button> -->
     <script src="./asstes/js/file.js"></script>
-</body>
+  </body>
 </html>
